# AndroidStudy_Rtmp_AVCode

./: README.md  settings.gradle  temp.txt
annotation_process/: build.gradle
annotation_process/src/main/java/com/zzm/annotation_process/: AnnotationProcess.java
app/: build.gradle
app/src/androidTest/java/com/zzm/play/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/zzm/play/: IClientCallback.aidl  IRequest.aidl
app/src/main/assets/: db_update.xml
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cpp/jpeg/: Play.cpp
app/src/main/jni/cpp/rtmp/: CMakeLists.txt  RtmpLive.cpp  log.c
app/src/main/jni/cpp/x264/: CallbackFromJniUtil.cpp  Camera2ToolNative.cpp  FAACAudioEncode.cpp  X264VideoEncode.cpp
app/src/main/jni/head/jpeg/: jconfigint.h  play.h
app/src/main/jni/head/rtmp/: rtmp_live.h
app/src/main/jni/head/x264/: android_log.h  call_back_from_jni_util.h  faac_audio_encode.h  x264.h  x264_video_encode.h
app/src/main/jni/head/x264/faac/: faac.h
app/src/main/res/drawable/: splash_background.xml
app/src/main/res/layout/: activity_main.xml  activity_main1.xml  bitmap_compress.xml  camera2_h26x_layout.xml  componentization_activity_layout.xml  db_activity_layout.xml  ioc_activity_layout.xml  item1.xml  item2.xml  my_view_group.xml  opengl_activity_layout.xml  plugin_activity_layout.xml  projection_screen_client.xml  projection_screen_server.xml  recyclerview.xml  rtmp_activity_layout.xml  test_layout.xml  video_mix.xml  x264_camera2_layout.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
game/: build.gradle
game/src/main/: AndroidManifest.xml
game/src/main/res/layout/: componentization_game_activity_layout.xml
gradle/wrapper/: gradle-wrapper.properties
router/: build.gradle
router/src/main/: AndroidManifest.xml
shopping/: build.gradle
shopping/src/main/: AndroidManifest.xml
shopping/src/main/res/layout/: componentization_shopping_activity_layout.xml
temp/: 2021-08-20_V1.0_release.apk
third_plugin/: build.gradle
third_plugin/src/main/: AndroidManifest.xml
(+105 files in other folders)
